--- a/style.css
+++ b/style.css
@@ -289,6 +289,17 @@ form button {
   color: white;
 }
 
+/* Transition  */
+.companies-logo-sections>ul>li>figure>img{
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.companies-logo-sections>ul>li>figure>img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+/* Transition end */
 /* Media queries */
 
 @media screen and (max-width: 800px) {
